--- a/Login/index.html
+++ b/Login/index.html
@@ -22,4 +22,6 @@
 <footer>
     <p>&copy; 2025 Camisas de Craque. Todos os Direitos Reservados</p>
 </footer>
+<a href="home.html"></a>
+<script src="js/script.js"></script>
 </html>
